remove imports.py file
