# routes/routes.py
@@ -1,0 +1,18 @@
+#users-----------------------------------------------------------------#
+from routes.users_routes import *
+#/tests-----------------------------------------------------------------#
+from routes.tests_routes import *
+#/resources-----------------------------------------------------------------#
+from routes.resources_routes import *
+#/questions-----------------------------------------------------------------#
+from routes.questions_routes import *
+#topics----------------------------------------------------------------------#
+from routes.topics_routes import *
+#user/tests--------------------------------------------------------------#
+from routes.users_tests_routes import *
+#user/questions--------------------------------------------------------------#
+from routes.users_questions_routes import *
+#user/paths--------------------------------------------------------------#
+from routes.users_paths_routes import *
+#user/resources-----------------------------------------------------------#
+from routes.users_resources_routes import *
