# static/swagger.json
@@ -8,10 +8,7 @@
         "url": "https://opensource.org/licenses/MIT"
         }
     },
-    "servers": [{
-        "url": "HTTP"
-
-    }],
+    
     "components": {
         "schemas": {
             "Users": {
@@ -21,6 +18,29 @@
                         "type": "string"
                     },
                     "surname": {
+                        "type": "string"
+                    },
+                    "nickname": {
+                        "type": "string"
+                    },
+                    "lang": {
+                        "type": "string"
+                    },
+                    "telegram_id": {
+                        "type": "integer"
+                    },
+                    "email": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Questions": {
+                "type": "object",
+                "properties": {
+                    "test_id": {
+                        "type": "integer"
+                    },
+                    "text": {
                         "type": "string"
                     },
                     "nickname": {
@@ -74,10 +94,10 @@
         }
     },
     "paths": {
-        "/questions": {
+        "/users": {
             
             "get" :{
-                "tags": ["Questions"],
+                "tags": ["Users"],
                 "summary": "Get all users",
                 "responses": {
                     "200": {
@@ -95,7 +115,7 @@
                 }
             }
             ,"post": {
-                "tags": ["Questions"],
+                "tags": ["Users"],
                 "summary": "Add user",
                 "requestBody": {
                     "description": "Post new user to database",
@@ -124,9 +144,9 @@
                 }
             }
         },
-        "/questions/{id}":{
+        "/users/{id}":{
             "get" :{
-                "tags": ["Questions"],
+                "tags": ["Users"],
                 "summary": "Get one user",
                 "parameters": [{
                     "name": "id",
@@ -154,7 +174,7 @@
                 }
             },
             "put": {
-                "tags": ["Questions"],
+                "tags": ["Users"],
                 "parameters": [{
                     "name": "id",
                     "in": "path",
@@ -193,7 +213,7 @@
                 }
             },
             "delete": {
-                "tags": ["Questions"],
+                "tags": ["Users"],
                 "parameters": [{
                     "name": "id",
                     "in": "path",
@@ -216,6 +236,153 @@
                         "description": "NOT FOUND",
                         "schema": {
                             "$ref": "#/components/schemas/Users"
+                        }
+                    }
+                }
+            }
+        },
+        "/questions": {
+            
+            "get" :{
+                "tags": ["Questions"],
+                "summary": "Get all questions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/components/schemas/Users"
+                        }
+                    },
+                    "404": {
+                        "description": "The data does not exists.",
+                        "schema": {
+                            "$ref": "#/components/schemas/Users"
+                        }
+                    }
+                }
+            }
+            ,"post": {
+                "tags": ["Questions"],
+                "summary": "Add a question",
+                "requestBody": {
+                    "description": "Post new question to database",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Questions"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    },
+                    "500": {
+                        "description": "No response.",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    }
+                }
+            }
+        },
+        "/questions/{id}":{
+            "get" :{
+                "tags": ["Questions"],
+                "summary": "Get one question",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "user id",
+                    "required": true,
+                    "type": "integer",
+                    "schema" : {
+                        "$ref": "#/components/schemas/Id"
+                    }
+                }],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    },
+                    "404": {
+                        "description": "The data does not exists.",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": ["Questions"],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "User id to update.",
+                    "required": true,
+                    "type": "integer",
+                    "schema" : {
+                        "$ref": "#/components/schemas/Id"
+                    }
+                }],
+                "summary": "Update user",
+                "requestBody": {
+                    "description": "Update existing question on database",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/update"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["Questions"],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "question id to delete",
+                    "required": true,
+                    "type": "integer",
+                    "schema" : {
+                        "$ref": "#/components/schemas/Id"
+                    }
+                }],
+                "summary": "Delete question",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "schema": {
+                            "$ref": "#/components/schemas/Questions"
                         }
                     }
                 }
